# perception_playground

./: .gitignore  CMakeLists.txt  package.xml
bags/librealsense_record/: frames.gv
cfg/: cfg1.rviz
examples/: example-imgui.hpp  example.hpp
image_frames/depth_colorizer_bag _images/depth_images1/: dframe0.npy  dframe1.npy  dframe10.npy  dframe100.npy  dframe101.npy  dframe102.npy  dframe103.npy  dframe104.npy  dframe105.npy  dframe106.npy  dframe107.npy  dframe108.npy  dframe109.npy  dframe11.npy  dframe110.npy  dframe111.npy  dframe112.npy  dframe113.npy  dframe114.npy  dframe115.npy  dframe116.npy  dframe117.npy  dframe118.npy  dframe119.npy  dframe12.npy  dframe120.npy  dframe121.npy  dframe122.npy  dframe123.npy  dframe124.npy  dframe125.npy  dframe126.npy  dframe127.npy  dframe128.npy  dframe129.npy  dframe13.npy  dframe130.npy  dframe131.npy  dframe132.npy  dframe133.npy  (+231 more)
image_frames/depth_colorizer_bag _images/rgb_images1/: frame1.npy  frame1002.npy  frame1014.npy  frame1036.npy  frame1064.npy  frame1074.npy  frame108.npy  frame1085.npy  frame1091.npy  frame1095.npy  frame11.npy  frame1104.npy  frame1109.npy  frame1119.npy  frame112.npy  frame1138.npy  frame114.npy  frame1140.npy  frame1141.npy  frame115.npy  frame1151.npy  frame116.npy  frame1164.npy  frame1165.npy  frame1182.npy  frame1184.npy  frame119.npy  frame1194.npy  frame1209.npy  frame1210.npy  frame1212.npy  frame1218.npy  frame1224.npy  frame1239.npy  frame1248.npy  frame1253.npy  frame1255.npy  frame1260.npy  frame1262.npy  frame127.npy  (+202 more)
image_frames/trimmed_mockup_rgb_images1/: frame1011.npy  frame1041.npy  frame105.npy  frame1066.npy  frame107.npy  frame1085.npy  frame1092.npy  frame1096.npy  frame11.npy  frame111.npy  frame1113.npy  frame1117.npy  frame112.npy  frame1133.npy  frame1143.npy  frame1155.npy  frame1182.npy  frame1189.npy  frame12.npy  frame1215.npy  frame1218.npy  frame123.npy  frame1238.npy  frame1256.npy  frame1263.npy  frame1272.npy  frame1288.npy  frame13.npy  frame1303.npy  frame1304.npy  frame1314.npy  frame132.npy  frame1325.npy  frame1340.npy  frame1349.npy  frame136.npy  frame1367.npy  frame1395.npy  frame1407.npy  frame1429.npy  (+269 more)
include/perception_playground/util/: pcl_util.h
launch/: convex_hull.launch  distance_filter.launch  pcl_processing.launch  point_cloud_assembler.launch  service_client.launch  transform.launch
notebooks/: README.md  distance_to_object.ipynb  environment.yml
notebooks/.ipynb_checkpoints/: distance_to_object-checkpoint.ipynb
notebooks/pointcloud_notebook/: environment.yml  pointcloud.ipynb
rviz/: display_urdf.rviz
scripts/: README.md  distance_to_object.py  distance_to_object_classifier.py  grabdepth.py  grabrgb.py  pointcloud.py  read_bag_example.py  read_npy.py  truedepthandrgb.sh
src/: example_planarsegmentation.cpp  example_voxelgrid.cpp  pcl_processing.cpp  raw_record_v2.cpp
src/pcl/: 1637622641.128300000.pcd  1637622652.290973000.pcd  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_cluster_6.pcd  cluster_extraction.cpp  pcl_processing.cpp  sep_processing.cpp
src/record/: my_rs-record-playback.cpp  raw_record.cpp  readme_rs-record-playback.md
src/util/: pcl_util.cpp
src_unused/: call_assembler.py
urdf/: camera.urdf.xacro  wheel.urdf.xacro  wombot.urdf.xacro
